// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"


const invariantHash_0 = \\"e111237317f05b862c7ea099ea1311369f25a01c6ce12768f20cd638ccb3ceec273e155dcbe328fed29eecc553502a19b162f0194f507b2a8a64f3dbc01b5322\\"
const name_0 = \\"Todos\\"
const resolvers_0 = {
  todos() {},
  items() {}
}

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
})

export default readModels
"
`;

exports[`base config works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testProjection.js\\"
import resolvers_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testResolvers.js\\"

import adapterModule_0 from \\"<MONOREPO_DIR>/adapters/readmodel-adapters/resolve-readmodel-memory/dist/index.js\\"

const invariantHash_0 = \\"e111237317f05b862c7ea099ea1311369f25a01c6ce12768f20cd638ccb3ceec273e155dcbe328fed29eecc553502a19b162f0194f507b2a8a64f3dbc01b5322\\"
const name_0 = \\"Todos\\"
const adapterOptions_0 = {}

const readModels = []

readModels.push({
  name: name_0
, projection: projection_0
, invariantHash: invariantHash_0
, resolvers: resolvers_0
, adapter: {
    module: adapterModule_0,
    options: adapterOptions_0
  }
})

export default readModels
"
`;

exports[`base(v2) config works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"


const invariantHash_0 = \\"e111237317f05b862c7ea099ea1311369f25a01c6ce12768f20cd638ccb3ceec273e155dcbe328fed29eecc553502a19b162f0194f507b2a8a64f3dbc01b5322\\"
const name_0 = \\"Todos\\"
const resolvers_0 = {
  todos() {},
  items() {}
}
const invariantHash_1 = \\"e111237317f05b862c7ea099ea1311369f25a01c6ce12768f20cd638ccb3ceec273e155dcbe328fed29eecc553502a19b162f0194f507b2a8a64f3dbc01b5322\\"
const name_1 = \\"Items\\"
const resolvers_1 = {
  todos() {},
  items() {}
}

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
})

readModels.push({
  name: name_1
, resolvers: resolvers_1
})

export default readModels
"
`;

exports[`base(v2) config works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testProjection.js\\"
import resolvers_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testResolvers.js\\"

import adapterModule_0 from \\"<MONOREPO_DIR>/adapters/readmodel-adapters/resolve-readmodel-memory/dist/index.js\\"
import projection_1 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testProjection.js\\"
import resolvers_1 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testResolvers.js\\"

import adapterModule_1 from \\"<MONOREPO_DIR>/adapters/readmodel-adapters/resolve-readmodel-memory/dist/index.js\\"

const invariantHash_0 = \\"e111237317f05b862c7ea099ea1311369f25a01c6ce12768f20cd638ccb3ceec273e155dcbe328fed29eecc553502a19b162f0194f507b2a8a64f3dbc01b5322\\"
const name_0 = \\"Todos\\"
const adapterOptions_0 = {}
const invariantHash_1 = \\"e111237317f05b862c7ea099ea1311369f25a01c6ce12768f20cd638ccb3ceec273e155dcbe328fed29eecc553502a19b162f0194f507b2a8a64f3dbc01b5322\\"
const name_1 = \\"Items\\"
const adapterOptions_1 = {}

const readModels = []

readModels.push({
  name: name_0
, projection: projection_0
, invariantHash: invariantHash_0
, resolvers: resolvers_0
, adapter: {
    module: adapterModule_0,
    options: adapterOptions_0
  }
})

readModels.push({
  name: name_1
, projection: projection_1
, invariantHash: invariantHash_1
, resolvers: resolvers_1
, adapter: {
    module: adapterModule_1,
    options: adapterOptions_1
  }
})

export default readModels
"
`;

exports[`config with storage + process.env works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"


const invariantHash_0 = \\"e111237317f05b862c7ea099ea1311369f25a01c6ce12768f20cd638ccb3ceec273e155dcbe328fed29eecc553502a19b162f0194f507b2a8a64f3dbc01b5322\\"
const name_0 = \\"Todos\\"
const resolvers_0 = {
  todos() {},
  items() {}
}

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
})

export default readModels
"
`;

exports[`config with storage + process.env works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testProjection.js\\"
import resolvers_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testResolvers.js\\"


const invariantHash_0 = \\"e111237317f05b862c7ea099ea1311369f25a01c6ce12768f20cd638ccb3ceec273e155dcbe328fed29eecc553502a19b162f0194f507b2a8a64f3dbc01b5322\\"
const name_0 = \\"Todos\\"
const adapter_0 = {
  \\"module\\": \\"process.env[\\\\\\"READ_MODEL_TODOS_ADAPTER\\\\\\"]\\",
  \\"options\\": {
    \\"size\\": \\"process.env[\\\\\\"READ_MODEL_TODOS_OPTIONS_SIZE\\\\\\"]\\"
  }
}
const adapterModule_0 = interopRequireDefault(
  __non_webpack_require__(adapter_0.module)
).default
const adapterOptions_0 = adapter_0.options

const readModels = []

readModels.push({
  name: name_0
, projection: projection_0
, invariantHash: invariantHash_0
, resolvers: resolvers_0
, adapter: {
    module: adapterModule_0,
    options: adapterOptions_0
  }
})

export default readModels
"
`;

exports[`config with storage works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"


const invariantHash_0 = \\"e111237317f05b862c7ea099ea1311369f25a01c6ce12768f20cd638ccb3ceec273e155dcbe328fed29eecc553502a19b162f0194f507b2a8a64f3dbc01b5322\\"
const name_0 = \\"Todos\\"
const resolvers_0 = {
  todos() {},
  items() {}
}

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
})

export default readModels
"
`;

exports[`config with storage works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testProjection.js\\"
import resolvers_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testResolvers.js\\"

import adapterModule_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testSnapshotAdapter.js\\"

const invariantHash_0 = \\"e111237317f05b862c7ea099ea1311369f25a01c6ce12768f20cd638ccb3ceec273e155dcbe328fed29eecc553502a19b162f0194f507b2a8a64f3dbc01b5322\\"
const name_0 = \\"Todos\\"
const adapterOptions_0 = {\\"size\\":100}

const readModels = []

readModels.push({
  name: name_0
, projection: projection_0
, invariantHash: invariantHash_0
, resolvers: resolvers_0
, adapter: {
    module: adapterModule_0,
    options: adapterOptions_0
  }
})

export default readModels
"
`;
